--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@supabase/supabase-js": "^1.31.1"
+    "@supabase/supabase-js": "^1.31.1",
+    "flatpickr": "^4.6.11",
+    "svelte-flatpickr": "^3.2.6"
   }
 }
