--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^1.31.1",
+    "dayjs": "^1.11.1",
     "flatpickr": "^4.6.11",
     "svelte-flatpickr": "^3.2.6"
   }
