--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "todocalendar",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev --port 3003 --host 0.0.0.0",
-    "build": "svelte-kit build",
+    "dev": "vite dev --port 3003 --host 0.0.0.0",
+    "build": "vite build",
     "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
+    "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -30,8 +30,10 @@
   "type": "module",
   "dependencies": {
     "@supabase/supabase-js": "^1.31.1",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.1",
     "flatpickr": "^4.6.11",
-    "svelte-flatpickr": "^3.2.6"
+    "svelte-flatpickr": "^3.2.6",
+    "vite": "^3.0.2"
   }
 }
